# intmux

./: Cargo.toml  Makefile  README.md  clippy.toml
.githooks/: pre-commit
scripts/: check_repo_constraints.sh
src/: lib.rs  main.rs  model.rs  reuse.rs  tests.rs  tmux.rs  tmux_target.rs
src/tests/: cli.rs  mod.rs  tmux_behavior.rs  tmux_reuse.rs
src/tmux/: client.rs  helpers.rs  mod.rs  process.rs  sticky.rs
tests/: tmux_integration.rs
