[package]
name = "intmux"
version = "0.1.0"
edition = "2024"
description = "Launch commands into a dedicated tmux session."
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
